docs: technologies of controllable units (FLEX-1038) (#610)
